--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index.js?v=1"></script>
 </body>
 
 </html>
